# MaxRunStats

./: CMakeLists.txt
app/: CMakeLists.txt
app/extract_stats/: main.cpp
